...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_background_toolbar"
            android:src="@drawable/ic_back_24" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_tittle"
            android:textColor="@color/white"
            android:textSize="@dimen/size_tittle"
...
