...
    <string name="title_toolbar_launch_list_activity">Space App 🚀</string>
    <string name="alert_dialog_error_tryagain_button">Try again</string>
    <string name="alert_dialog_error_title">Space App 🚀 - Error alert</string>
    <string name="alert_dialog_error_message">Error trying to get list, verify your internet connection and try again</string>
    <string name="launch_successes">Launch Successes: %d</string>
    <string name="launch_attempts">Launch Attempts: %d</string>
    <string name="launch_list_content_description">Launch list</string>
</resources>

